--- a/base_index.html
+++ b/base_index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>My First HTML Page</title>
+    <title>My Base Page</title>
   </head>
   <body>
     <h1>Hello World!</h1>
-    <p>This is my first valid HTML page created for my portfolio.</p>
+    <p>This is my base HTML page for ALX.</p>
   </body>
 </html>
-
